# ginkgo

./: .clang-format  .cmake-format.json  .editorconfig  .gersemi.py  .gersemirc  .gitignore  .gitlab-ci.yml  .gitlab-condition.yml  .pre-commit-config.yaml  .readthedocs.yaml  ABOUT-LICENSING.md  BENCHMARKING.md  CHANGELOG.md  CITATION.cff  CITING.md  CMakeCIPresets.json  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPackConfig.cmake  CTestConfig.cmake  INSTALL.md  Install.md  LICENSE  LICENSE.md  Makefile.abstract_spmv  README.md  Reproduce_Experiments.md  TESTING.md  TODO_CB_GMRES.txt  _typos.toml  abstract_spmv_README.md  abstract_spmv_standalone.cu  abstract_spmv_test.cu  async_malloc_test.cu  async_malloc_test.hip.cpp  c_api.cpp  codecov.yml  conanfile.py  contributors.md  (+8 more)
benchmark/: CMakeLists.txt  benchmark.sh  blas-distributed.1.json  blas.1.json  conversion.1.json  matrix-generator.1.json  preconditioner.1.json  represent.id_list  run_all_benchmarks.sh  run_solver_benchmark.sh  schema.operator.json  schema.operators.json  schema.solver.json  search.sh  solver.1.json  solver.dist.1.json  solver.id_list  spmv-distributed.1.json  spmv.1.json  spmv.2.json  spmv.flat.json  spmv.item.schema.json  spmv.schema.json
benchmark/blas/: CMakeLists.txt  blas.cpp  blas_common.hpp
benchmark/conversion/: CMakeLists.txt  conversion.cpp
benchmark/conversions/: CMakeLists.txt  conversions.cpp
benchmark/distributed/: CMakeLists.txt  communication.cpp  mpi.cpp  multivector.cpp  scaling.cpp  solver.cpp  spmv.cpp
benchmark/gpu-microbenchmarks/: CMakeLists.txt  bitvector.gpu.cpp  memory.gpu.cpp  sorting.gpu.cpp
benchmark/matrix_generator/: CMakeLists.txt  matrix_generator.cpp
benchmark/matrix_statistics/: CMakeLists.txt  matrix_statistics.cpp
benchmark/preconditioner/: CMakeLists.txt  preconditioner.cpp
benchmark/schema/: blas-distributed.json  blas.json  conversion.json  matrix-generator.json  matrix-statistics.json  operator-distributed.json  operator-distributed.reuse.json  operator.json  operator.reuse.json  preconditioner.json  solver-distributed.json  solver.json  sparse-blas.json  spmv-distributed.json  spmv-distributed.reuse.json  spmv.json  spmv.reuse.json
benchmark/solver/: CMakeLists.txt  batch_block_diagonal_solver.cpp  batch_solver.cpp  batch_solver.hpp  batch_solver_profile.cpp  solver.cpp  solver_common.hpp
benchmark/sparse_blas/: CMakeLists.txt  cholmod_symbolic.patch  operations.cpp  operations.hpp  sparse_blas.cpp
benchmark/spgeam/: CMakeLists.txt  spgeam.cpp
benchmark/spgemm/: CMakeLists.txt  spgemm.cpp
benchmark/spmv/: CMakeLists.txt  batch_spmv.cpp  cuda_linops.hpp  hip_linops.hip.hpp  mg_2cubes_sphere.json  mg_beam.json  mg_cage13.json  mg_cage14.json  mg_l-shape.json  mg_offshore.json  mg_thermal2.json  mg_tmt_sym.json  run_spmv.sh  spmv.cpp  spmv_common.hpp
benchmark/spmv_comparison_cuda/: CMakeLists.txt  additional_check.patch  build.sh  spmv_comparison_cuda.cpp
benchmark/test/: CMakeLists.txt  blas.py  conversion.py  input.blas.json  input.conversion.all.json  input.conversion.json  input.distributed_mtx.json  input.distributed_solver.json  input.mtx.json  input.mtx.json.license  input.preconditioner.json  input.solver.json  input.sparse_blas.json  matrix_statistics.py  multi_vector_distributed.py  preconditioner.py  solver.py  solver_distributed.py  sparse_blas.py  spmv.py  spmv_distributed.py  test_framework.py.in
benchmark/tools/: CMakeLists.txt  compare.py  compare_test.py  compare_test_input1.json  compare_test_input2.json  compare_test_input3.json  matrix.cpp  mtx_to_binary.cpp
benchmark/utils/: chrono_utils.hpp  common.hpp  cuda_linops.cpp  cuda_linops.cu  cuda_linops.hpp  cuda_timer.cpp  cuda_timer.cu  distributed_helpers.hpp  dpcpp_linops.dp.cpp  dpcpp_timer.dp.cpp  formats.hpp  general.hpp  general_matrix.hpp  generator.hpp  hip_linops.hip.cpp  hip_linops.hip.hpp  hip_timer.hip.cpp  intel_linops.dp.hpp  iteration_control.hpp  json.hpp  loggers.hpp  mpi_timer.cpp  overhead_linop.hpp  preconditioners.hpp  runner.hpp  sparselib_linops.hpp  spmv_common.hpp  spmv_validation.hpp  stencil_matrix.cpp  stencil_matrix.hpp  stencil_matrix_kernels.cpp  stencil_matrix_kernels.hpp  timer.hpp  timer_impl.hpp  tuning_variables.cpp  tuning_variables.hpp  types.hpp
bindings/: CMakeLists.txt  cg.cpp  coo.cpp  criteria.cpp  dense.cpp  matrix.cpp  preconditioner.cpp  python.cpp  python.hpp
bindings/test/: CMakeLists.txt  python-bindings.py
core/: CMakeLists.txt  c_api.cpp  config_parser.cpp  exception.hpp  exception_helpers.hpp  executor.cpp  get_info.cmake  throw_macros.hpp  types.hpp
cpu/: CMakeLists.txt
csl/: CMakeLists.txt  application_base_compile.py  application_base_compile_dummy.py  cerebras_handle.cpp  cerebras_handle.hpp  cerebras_interface.cpp  cerebras_interface.hpp  cerebras_layout.hpp  layout.csl  main.cpp  pe.csl  pe_program.csl  python_handler.hpp  python_inner_functions.hpp  test_csl.cpp
cuda/: CMakeLists.txt  get_info.cmake
devices/: CMakeLists.txt  device.cpp  machine_topology.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyfile-dev.in  Doxyfile-internal  Doxyfile-usr.in  Doxyfile.in  DoxygenLayout.xml  api.rst  benchmarking.md  conf.py  conf.py.in  contributing.md  helpers.cmake  index.md  index.rst  publications.md  requirements.in  requirements.txt  stylesheet.css  testing.md  using-ginkgo.md
dpcpp/: CMakeLists.txt  get_info.cmake  test_dpcpp.dp.cpp
examples/: CMakeLists.txt  build-setup.sh  compare-output.py
extensions/: CMakeLists.txt
gpu/: CMakeLists.txt  executor.cpp
hip/: CMakeLists.txt  get_info.cmake
include/: CMakeLists.txt  config.hpp.in  ginkgo.hpp  papi_sde_interface.h
install_test/: CMakeLists.txt  install_test.cpp
mpi/: CMakeLists.txt  get_info.cmake
omp/: CMakeLists.txt  get_info.cmake
poplar/: CMakeLists.txt  test_poplar.cpp
reference/: CMakeLists.txt  get_info.cmake
smoke_test/: CMakeLists.txt
test/: CMakeLists.txt
test_exportbuild/: CMakeLists.txt
test_install/: CMakeLists.txt  test_install.cpp  test_install.hip.cpp  test_install_cuda.cu
test_subdir/: CMakeLists.txt
(+20272 files in other folders)
